--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html,body {
   padding: 0;
 }
 body {
-  background-color: #C1A878;
+  background-color: gray;
   font-family: 'Georgia', serif;
   font-weight: 400;
   font-size: 18px;
@@ -53,6 +53,7 @@ a:hover {
 
 .header {
   background: #7F4F21;
+  color:white;
   padding-top: 1em;
   padding-bottom: 1em;
   margin-bottom: 1em;
