--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,13 @@ h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
   font-weight: inherit;
   line-height: 1.2;
+  color:white;
 }
 
 h1 {
   margin-top: 0;
   font-size: 2.074em;
-  color: rgb(54, 8, 8);
+  
 }
 
 h2 {font-size: 1.728em;}
@@ -53,7 +54,7 @@ a:hover {
 
 .header {
   background: #7F4F21;
-  color:white;
+  font-color:white;
   padding-top: 1em;
   padding-bottom: 1em;
   margin-bottom: 1em;
